Fix roll alignment in tooltip

--- a/src/style/chat/module.scss
+++ b/src/style/chat/module.scss
@@ -355,6 +355,7 @@
                                     .roll {
                                         float: unset;
                                         margin: 0;
+                                        height: 24px;
 
                                         &.success, &.max {                                            
                                             color: var(--cosmere-color-opportunity);
